--- a/releases/development/jenkins-release.yaml
+++ b/releases/development/jenkins-release.yaml
@@ -14,7 +14,8 @@ spec:
     ref: development
   values:
     image:
-      repository: seanmcguigan/jenkins
+      registry: docker.io
+      image: seanmcguigan/jenkins
       tag: dev-12345
      # pullSecret: gpr-docker-pull
      # pullPolicy: IfNotPresent
