--- a/charts/jenkins/values.yaml
+++ b/charts/jenkins/values.yaml
@@ -65,10 +65,10 @@ master:
         hYAzODo1Jt59pcqqKJEas0C/lFJEB3frw4ImNx5fNlJYOpx+ijfQs9m39CevDq0=
   # Used for label app.kubernetes.io/component
   componentName: "jenkins-master"
-  image: "seanmcguigan/jenkins"
-  tag: "dev-12345"
-  # image: "jenkins/jenkins"
-  # tag: "lts"
+  # image: "seanmcguigan/jenkins"
+  # tag: "dev-12345"
+  image: "jenkins/jenkins"
+  tag: "lts"
   imagePullPolicy: "Always"
   imagePullSecretName:
   # Optionally configure lifetime for master-container
