--- a/releases/development/poker-release.yaml
+++ b/releases/development/poker-release.yaml
@@ -1,23 +1,47 @@
 apiVersion: helm.fluxcd.io/v1
 kind: HelmRelease
 metadata:
-  name: jenkins-dev
+  name: poker-dev
   namespace: clim8
   annotations:
     fluxcd.io/automated: "true"
     filter.fluxcd.io/chart-image: glob:dev-*
 spec:
-  releaseName: jenkins-dev
+  releaseName: poker-dev
   chart:
     git: https://github.com/seanmcguigan/deployments.git
-    path: charts/jenkins
+    path: charts/poker
     ref: development
   values:
-    persistence:
+    replicaCount: 0
+    image:
+      repository: docker.io/seanmcguigan/poker
+      pullPolicy: Always
+      tag: "dev-12345"
+    containerPort: 3000
+    livenessProbe:
+      httpGet:
+        path: /lobby-data
+    readinessProbe:
+      httpGet:
+        path: /lobby-data
+    serviceAccount:
+      create: true
+    service:
+      type: ClusterIP
+      port: 80
+      targetPort: 3000
+    ingress:
       enabled: false
-    master:
-      image: seanmcguigan/jenkins
-      tag: dev-12345
-      # pullSecret: gpr-docker-pull
-      # pullPolicy: IfNotPresent
-      replicaCount: 1
+    resources:
+      limits:
+        cpu: 100m
+        memory: 128Mi
+      requests:
+        cpu: 100m
+        memory: 128Mi
+    autoscaling:
+      enabled: true
+      minReplicas: 1
+      maxReplicas: 5
+      targetCPUUtilizationPercentage: 50
