--- a/releases/development/jenkins-release.yaml
+++ b/releases/development/jenkins-release.yaml
@@ -17,8 +17,7 @@ spec:
     persistence:
       enabled: false
     master:
-      image: seanmcguigan/jenkins
-      tag: dev-11111
+      image: seanmcguigan/jenkins:dev-33333
       # pullSecret: gpr-docker-pull
       # pullPolicy: IfNotPresent
       replicaCount: 1
