--- a/releases/development/jenkins-release.yaml
+++ b/releases/development/jenkins-release.yaml
@@ -5,7 +5,7 @@ metadata:
   name: jenkins-dev
   namespace: clim8
   annotations:
-    fluxcd.io/automated: "true"
+    fluxcd.io/automated: "false"
     filter.fluxcd.io/chart-image: glob:dev-*
 spec:
   releaseName: jenkins-dev
