--- a/releases/development/poker-release.yaml
+++ b/releases/development/poker-release.yaml
@@ -18,6 +18,7 @@ spec:
     image:
       repository: seanmcguigan/poker
       tag: dev-8late
+    imagePullSecrets: regcred
     containerPort: 3000
     livenessProbe:
       httpGet:
