--- a/charts/poker/values.yaml
+++ b/charts/poker/values.yaml
@@ -10,7 +10,7 @@ image:
   # Overrides the image tag whose default is the chart appVersion.
   tag: "0.1.0"
 
-imagePullSecrets: []
+imagePullSecrets: regcred
 nameOverride: ""
 fullnameOverride: ""
 containerPort: 3000
