--- a/releases/development/jenkins-release.yaml
+++ b/releases/development/jenkins-release.yaml
@@ -1,24 +1,24 @@
----
-apiVersion: helm.fluxcd.io/v1
-kind: HelmRelease
-metadata:
-  name: jenkins-dev
-  namespace: clim8
-  annotations:
-    fluxcd.io/automated: "false"
-    filter.fluxcd.io/chart-image: glob:dev-*
-spec:
-  releaseName: jenkins-dev
-  chart:
-    git: https://github.com/seanmcguigan/deployments.git
-    path: charts/jenkins
-    ref: development
-  values:
-    persistence:
-      enabled: false
-    master:
-      image: seanmcguigan/jenkins
-      tag: dev-4cfg9
-      # pullSecret: gpr-docker-pull
-      # pullPolicy: IfNotPresent
-      replicaCount: 1
+#---
+#apiVersion: helm.fluxcd.io/v1
+#kind: HelmRelease
+#metadata:
+#  name: jenkins-dev
+#  namespace: clim8
+#  annotations:
+#    fluxcd.io/automated: "false"
+#    filter.fluxcd.io/chart-image: glob:dev-*
+#spec:
+#  releaseName: jenkins-dev
+#  chart:
+#    git: https://github.com/seanmcguigan/deployments.git
+#    path: charts/jenkins
+#    ref: development
+#  values:
+#    persistence:
+#      enabled: false
+#    master:
+#      image: seanmcguigan/jenkins
+#      tag: dev-4cfg9
+#      # pullSecret: gpr-docker-pull
+#      # pullPolicy: IfNotPresent
+#      replicaCount: 1
